[project]
name = "dialogue-separator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kohei ASAI", email = "ko2001he@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "flow-matching>=1.0.10",
    "lhotse-dataset",
    "lightning[extra]>=2.5.1.post0",
    "litmodels>=0.1.8",
    "matplotlib>=3.10.3",
    "mmdit>=0.2.2",
    "onnx2torch>=1.5.15",
    "python-dotenv>=1.1.1",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "transformers>=4.52.3",
    "wandb>=0.19.10",
    "webdataset>=0.2.111",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]

[tool.ruff]
exclude = [".venv"]
indent-width = 4
fix = true

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["ALL"]

[tool.ruff.lint.pycodestyle]
max-line-length = 128

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.uv.sources]
lhotse-dataset = { git = "ssh://github.com/koacai/lhotse-dataset.git" }
torch = { index = "torch-aarch", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'"}
torchaudio = { index = "torch-aarch", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'"}

[[tool.uv.index]]
name = "torch-aarch"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.pytest.ini_options]
addopts = "-vv --tb=short -s"
