[project]
name = "flowditse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kohei ASAI", email = "ko2001he@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "discrete-speech-metrics",
    "fastdtw>=0.3.4",
    "faster-whisper>=1.2.0",
    "flow-matching>=1.0.10",
    "jiwer>=4.0.0",
    "lhotse-dataset",
    "lightning[extra]>=2.5.1.post0",
    "litmodels>=0.1.8",
    "matplotlib>=3.10.3",
    "mmdit>=0.2.2",
    "peft>=0.16.0",
    "phonemizer>=3.3.0",
    "pyroomacoustics>=0.8.4",
    "pysptk>=1.0.1",
    "python-dotenv>=1.1.1",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchmetrics[audio]>=1.7.1",
    "transformers>=4.52.3",
    "utmosv2",
    "wandb>=0.19.10",
    "webdataset>=0.2.111",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]

[tool.ruff]
exclude = [".venv"]
indent-width = 4
fix = true

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["ALL"]

[tool.ruff.lint.pycodestyle]
max-line-length = 128

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.uv.sources]
lhotse-dataset = { git = "ssh://github.com/koacai/lhotse-dataset.git" }
torch = { index = "torch-aarch", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'"}
torchaudio = { index = "torch-aarch", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'"}
discrete-speech-metrics = { git = "https://github.com/kohei0209/DiscreteSpeechMetrics.git", rev = "mhubert_wo_pypesq" }
utmosv2 = { git = "https://github.com/sarulab-speech/UTMOSv2.git" }

[[tool.uv.index]]
name = "torch-aarch"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.pytest.ini_options]
addopts = "-vv --tb=short -s"
