[project]
name = "geneses"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kohei ASAI", email = "ko2001he@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "discrete-speech-metrics",
    "fastdtw>=0.3.4",
    "faster-whisper>=1.2.1",
    "flow-matching>=1.0.10",
    "jiwer>=4.0.0",
    "lhotse-dataset",
    "librosa>=0.11.0",
    "lightning[extra]>=2.5.6",
    "matplotlib>=3.10.7",
    "mmdit>=0.2.2",
    "peft>=0.18.0",
    "phonemizer>=3.3.0",
    "pyroomacoustics>=0.8.6",
    "pysptk>=1.0.1",
    "soundfile>=0.13.1",
    "speechbrain>=1.0.3",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchmetrics[audio]>=1.8.2",
    "transformers>=4.57.1",
    "utmosv2",
    "wandb>=0.23.0",
    "webdataset>=1.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]

[tool.ruff]
exclude = [".venv"]
indent-width = 4
fix = true

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["ALL"]

[tool.ruff.lint.pycodestyle]
max-line-length = 128

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.uv.sources]
lhotse-dataset = { git = "ssh://github.com/koacai/lhotse-dataset.git" }
torch = { index = "torch-aarch", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'"}
torchaudio = { index = "torch-aarch", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'"}
discrete-speech-metrics = { git = "https://github.com/kohei0209/DiscreteSpeechMetrics.git", rev = "mhubert_wo_pypesq" }
utmosv2 = { git = "https://github.com/sarulab-speech/UTMOSv2.git" }

[[tool.uv.index]]
name = "torch-aarch"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.pytest.ini_options]
addopts = "-vv --tb=short -s"
